<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/btn_favorite"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/bg_button"
            android:drawableStart="@drawable/ic_favorite_border_black"
            android:drawableLeft="@drawable/ic_favorite_border_black"
            android:text="@string/favorite"
            android:textAllCaps="false"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/btn_share"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_weight="1"
            android:background="@drawable/bg_button"
            android:drawableStart="@drawable/ic_share_black"
            android:drawableLeft="@drawable/ic_share_black"
            android:text="@string/share"
            android:textAllCaps="false"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/btn_trailer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_weight="1"
            android:background="@drawable/bg_button"
            android:drawableStart="@drawable/ic_play_black"
            android:drawableLeft="@drawable/ic_play_black"
            android:text="@string/watch_trailer"
            android:textAllCaps="false"
            tools:ignore="ButtonStyle" />
    </LinearLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

<!--        <TableRow>-->
<!--            <TextView-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text="@string/country"-->
<!--                android:textSize="16sp"-->
<!--                android:textStyle="bold"-->
<!--                android:textColor="@color/colorPrimaryDark"-->
<!--                android:layout_marginRight="16dp"-->
<!--                android:layout_marginEnd="16dp"-->
<!--                tools:text="Country" />-->

<!--            <TextView-->
<!--                android:id="@+id/text_country"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:textSize="16sp"-->
<!--                tools:text="Indonesia" />-->
<!--        </TableRow>-->

        <TableRow>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/released"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/colorPrimaryDark"
                android:layout_marginRight="16dp"
                android:layout_marginEnd="16dp" />

            <TextView
                android:id="@+id/text_released"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                tools:text="2018" />
        </TableRow>

        <TableRow
            android:layout_marginTop="16dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rating"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/colorPrimaryDark"
                android:layout_marginRight="16dp"
                android:layout_marginEnd="16dp" />

            <TextView
                android:id="@+id/text_rating"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                tools:text="8.9" />
        </TableRow>

        <TableRow
            android:layout_marginTop="16dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/genres"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/colorPrimaryDark"
                android:layout_marginRight="16dp"
                android:layout_marginEnd="16dp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_genres"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                android:orientation="horizontal"
                tools:listitem="@layout/items_genres"/>

        </TableRow>

        <TableRow
            android:layout_marginTop="8dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/colorPrimaryDark"
                android:layout_marginRight="16dp"
                android:layout_marginEnd="16dp" />

        </TableRow>

        <TextView
            android:id="@+id/text_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_marginTop="8dp"
            tools:text="This the description" />

    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>